--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header>
 
-        <h1>Programa de Estudos de Guitarra</h1>
+        <h1 id = 'h1'>Programa de Estudos de Guitarra</h1>
 
 
     </header>
